# initial-promt-project

./: .env.sample  .gitignore  README.md  pyproject.toml
input/: input.csv
scripts/: check_flux_kontext_max.py  check_flux_kontext_pro.py  check_flux_pro_ultra.py  check_gemini_pro.py
src/: _main.py  logger.py  main.py
src/caching/: caching.py
src/csv_converter/: csv_converter.py
src/llms/openrouter/: models.py  openrouter_client.py
src/llms/replicate/: __init__.py  models.py  replicate_client.py
src/multithreading/: multithreading.py
src/openrouter/: client.py  models.py
src/prompts/: historical.py
src/stats/: stats_counter.py
tests/: test_caching.py  test_csv_converter.py  test_multithreading.py  test_openrouter_client.py  test_replicate_client.py  test_stats_counter.py
